# Zuberi

./: AGENT-BOOTSTRAP.md  README.md  ZUBERI-PROJECT-REFERENCE.md  rtl_dashboard.html
AIAgent/ZBuild/Repos/cxdb-main/clients/rust/: Cargo.toml  README.md
AIAgent/ZBuild/Repos/cxdb-main/clients/rust/examples/: basic.rs  fstree_snapshot.rs  interop.rs
AIAgent/ZBuild/Repos/cxdb-main/clients/rust/src/: client.rs  context.rs  encoding.rs  error.rs  events.rs  follow.rs  fs.rs  lib.rs  protocol.rs  reconnect.rs  sse_decode.rs  subscribe.rs  telemetry.rs  test_util.rs  turn.rs
AIAgent/ZBuild/Repos/cxdb-main/clients/rust/src/fstree/: capture.rs  mod.rs  options.rs  snapshot.rs  tests.rs  tracker.rs  types.rs  upload.rs
AIAgent/ZBuild/Repos/cxdb-main/clients/rust/src/types/: builders.rs  conversation.rs  mod.rs  provenance.rs  tests.rs
AIAgent/ZBuild/Repos/cxdb-main/clients/rust/tests/: fstree_integration.rs  integration.rs
AIAgent/ZBuild/Repos/cxdb-main/clients/rust/tests/fixtures/: README.md  append_idempotent.json  append_parent0.json  append_parent7.json  append_with_fs.json  attach_fs.json  ctx_create_base0.json  ctx_fork_base123.json  fstree_basic.json  get_head_ctx42.json  get_last_default.json  get_last_payload.json  hello_empty.json  hello_tag.json  msgpack_conversation_item.json  msgpack_numeric_map.json  put_blob.json
AIAgent/ZBuild/Repos/cxdb-main/server/: Cargo.toml  README.md
AIAgent/ZBuild/Repos/cxdb-main/server/src/: config.rs  error.rs  events.rs  lib.rs  main.rs  metrics.rs  s3_sync.rs  store.rs
AIAgent/ZBuild/Repos/cxdb-main/server/src/blob_store/: README.md  mod.rs
AIAgent/ZBuild/Repos/cxdb-main/server/src/cql/: ast.rs  executor.rs  indexes.rs  mod.rs  parser.rs
AIAgent/ZBuild/Repos/cxdb-main/server/src/fs_store/: mod.rs
AIAgent/ZBuild/Repos/cxdb-main/server/src/http/: README.md  mod.rs
AIAgent/ZBuild/Repos/cxdb-main/server/src/projection/: README.md  mod.rs
AIAgent/ZBuild/Repos/cxdb-main/server/src/protocol/: README.md  mod.rs
AIAgent/ZBuild/Repos/cxdb-main/server/src/registry/: README.md  mod.rs
AIAgent/ZBuild/Repos/cxdb-main/server/src/turn_store/: README.md  mod.rs
AIAgent/ZBuild/Repos/cxdb-main/server/tests/: blob_store_resilience.rs  cql_integration.rs  registry_projection.rs  store_basic.rs
decisions/: log.yaml
designs/: approval-cards.md  coaching-bridge.md  coaching-bridge.ps1  cxdb-sync-layer.md  self-improving.md  (+5 more)
(+426 files in other folders)
