[package]
name = "cxdb"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "CXDB client SDK for Rust - AI Context Store protocol client with type-safe APIs"
authors = ["StrongDM <opensource@strongdm.com>"]
repository = "https://github.com/strongdm/cxdb"
homepage = "https://github.com/strongdm/cxdb"
readme = "README.md"
keywords = ["ai", "context", "client", "sdk", "cxdb"]
categories = ["api-bindings", "development-tools"]
publish = true

[dependencies]
blake3 = "1"
byteorder = "1"
crossbeam-channel = "0.5"
ctrlc = "3"
glob = "0.3"
once_cell = "1"
serde_json = "1"
rmp-serde = "1"
rmpv = { version = "1", features = ["with-serde"] }
rmp = "0.8"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-native-certs = "0.8"
rustls-pki-types = "1"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde-value = "0.7"
thiserror = "1"
ureq = "2"
uuid = { version = "1", features = ["v4"] }
whoami = "1.5"

[dev-dependencies]
hex = "0.4"
tempfile = "3"
rcgen = "0.13"
